[package]
name = "acqmidproc"
version = "0.1.0"
edition = "2021"
authors = ["Luca Cavicchioli"]
description = "Preprocess images from acquire.py and feed them to cam.py"

[dependencies]
gtk = { version = "0.8.0", package = "gtk4", features = ["v4_8"] }
notify = "6.1"
notify-debouncer-full = "0.3"
anyhow = "1.0"
log = "0.4"
flexi_logger = "0.27"
clap = { version = "4.4.18", features = ["derive"] }
figment = { version = "0.10.14", features = ["toml"] }
serde = { version = "1.0.196", features = ["derive"] }
colored = "2.1.0"
byteorder = "1.5.0"
ndarray = { version = "0.15.6", features = ["rayon", "docs"] }
